--- a/.drone.yml
+++ b/.drone.yml
@@ -25,5 +25,7 @@ steps:
        from_secret: BUILD_USER
      BUILD_HOST:
        from_secret: BUILD_HOST
+     AKHIR:
+       from_secret: AKHIR
    commands:
      - bash kernelbuild.sh
