--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,8 @@ steps:
        from_secret: BUILD_USER
      BUILD_HOST:
        from_secret: BUILD_HOST
+     AWAL:
+       from_secret: AWAL
      AKHIR:
        from_secret: AKHIR
    commands:
